MSVSCPP_FILES = \
	fdatetime_test_fat_date_time_copy_from/fdatetime_test_fat_date_time_copy_from.vcproj \
	fdatetime_test_fat_date_time_to_string/fdatetime_test_fat_date_time_to_string.vcproj \
	fdatetime_test_filetime_copy_from/fdatetime_test_filetime_copy_from.vcproj \
	fdatetime_test_filetime_to_string/fdatetime_test_filetime_to_string.vcproj \
	fdatetime_test_floatingtime_copy_from/fdatetime_test_floatingtime_copy_from.vcproj \
	fdatetime_test_floatingtime_to_string/fdatetime_test_floatingtime_to_string.vcproj \
	fdatetime_test_hfs_time_copy_from/fdatetime_test_hfs_time_copy_from.vcproj \
	fdatetime_test_hfs_time_to_string/fdatetime_test_hfs_time_to_string.vcproj \
	fdatetime_test_nsf_timedate_copy_from/fdatetime_test_nsf_timedate_copy_from.vcproj \
	fdatetime_test_nsf_timedate_to_string/fdatetime_test_nsf_timedate_to_string.vcproj \
	fdatetime_test_posix_time_copy_from/fdatetime_test_posix_time_copy_from.vcproj \
	fdatetime_test_posix_time_to_string/fdatetime_test_posix_time_to_string.vcproj \
	fdatetime_test_systemtime_copy_from/fdatetime_test_systemtime_copy_from.vcproj \
	fdatetime_test_systemtime_to_string/fdatetime_test_systemtime_to_string.vcproj \
	libcerror/libcerror.vcproj \
	libcstring/libcstring.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfdatetime.sln

SCRIPT_FILES = \
	scripts/vs2008_x64.sh \
	scripts/vs2008_x64_sln.sed \
	scripts/vs2008_x64_vcproj.sed \
	scripts/vs2010_x64.sh \
	scripts/vs2010_x64_sln.sed \
	scripts/vs2010_x64_vcxproj.sed

EXTRA_DIST = \
	$(MSVSCPP_FILES) \
	$(SCRIPT_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

