MSVSCPP_FILES = \
	fdatetime_test_error/fdatetime_test_error.vcproj \
	fdatetime_test_fat_date_time/fdatetime_test_fat_date_time.vcproj \
	fdatetime_test_filetime/fdatetime_test_filetime.vcproj \
	fdatetime_test_floatingtime/fdatetime_test_floatingtime.vcproj \
	fdatetime_test_hfs_time/fdatetime_test_hfs_time.vcproj \
	fdatetime_test_nsf_timedate/fdatetime_test_nsf_timedate.vcproj \
	fdatetime_test_posix_time/fdatetime_test_posix_time.vcproj \
	fdatetime_test_support/fdatetime_test_support.vcproj \
	fdatetime_test_systemtime/fdatetime_test_systemtime.vcproj \
	libcerror/libcerror.vcproj \
	libcstring/libcstring.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfdatetime.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

